gccida/g2/cleanup_cfg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2231:9: error: conflicting types for 'cleanup_cfg'
_BOOL8  cleanup_cfg( int a1) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/output.h:147:13: note: previous declaration is here
extern bool cleanup_cfg                 PARAMS ((int));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2375:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code1; // [rsp+28h] [rbp-90h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2376:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code1a; // [rsp+28h] [rbp-90h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2379:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code2; // [rsp+34h] [rbp-84h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2382:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v152; // [rsp+50h] [rbp-68h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2395:15: error: use of undeclared identifier 'TV_CLEANUP_CFG_0'; did you mean 'TV_CLEANUP_CFG'?
timevar_push( TV_CLEANUP_CFG_0); 
              ^~~~~~~~~~~~~~~~
              TV_CLEANUP_CFG
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/timevar.def:45:13: note: 'TV_CLEANUP_CFG' declared here
DEFTIMEVAR (TV_CLEANUP_CFG           , "cfg cleanup")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2486:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v126 = ( rtx)v126[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2500:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v131 = (  struct rtx_def *)end[4]; 
                           ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2504:30: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
&& ( v132.rtwint = ( __int64)v131[1].fld[0]) != 0 
                             ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2589:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v92 = ( rtx)v92[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2674:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v111.rtwint = ( __int64)v108[1].fld[0]; 
                        ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2711:18: error: incomplete definition of type 'union tree_node'
blockc->head_tree->decl.context = ( tree)( *( ( _DWORD *)&blockc->head_tree->block + 20) | 1u); 
~~~~~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/config.h:11:7: note: forward declaration of 'union tree_node'
union tree_node;
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2711:76: error: incomplete definition of type 'union tree_node'
blockc->head_tree->decl.context = ( tree)( *( ( _DWORD *)&blockc->head_tree->block + 20) | 1u); 
                                                          ~~~~~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/config.h:11:7: note: forward declaration of 'union tree_node'
union tree_node;
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:2903:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v34 = ( __int64)v32[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/cfgcleanup.c:3408:14: error: use of undeclared identifier 'TV_CLEANUP_CFG_0'; did you mean 'TV_CLEANUP_CFG'?
timevar_pop( TV_CLEANUP_CFG_0); 
             ^~~~~~~~~~~~~~~~
             TV_CLEANUP_CFG
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/timevar.def:45:13: note: 'TV_CLEANUP_CFG' declared here
DEFTIMEVAR (TV_CLEANUP_CFG           , "cfg cleanup")
            ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_cfg/src/obj/cfgcleanup.o] Error 1
